# mvzk_dev

./: .gitignore  CMakeLists.txt  config.h  utility.h
data_type/: PolyDelta.cpp  PolyDelta.h  PolyTensor.cpp  PolyTensor.h  tensor_loader.h
exec/: ExecProver.h  ExecVerifier.h  MVZKExec.h
frontend/: backend_cpp_templates.py  compiler.py  extractor.py  ground_truth.py  input_processor.py  requirements.txt  run_pipeline.py
local_models/: resnet101.cpp  resnet101.h  resnet50.cpp  resnet50.h  vgg11.cpp  vgg11.h  vgg16.cpp  vgg16.h
operations/: linear.cpp  linear.h  lut.cpp  lut.h  nonlinear.cpp  nonlinear.h
test/local_model_test/: resnet101_test.cpp  resnet50_test.cpp  vgg11_test.cpp  vgg16_test.cpp
